tests/NormalTests/paczka1/fuzzy1/73204484.err
Error in line 4: S218 S567 45,1
Error in line 7: DPT8tLbUA S567 64,0
Error in line 21: dftV A960 23,4
Error in line 29: 0dwl7rMTB A960 243,4
Error in line 38: S218 S218 72,+
